# decNumber

./: Makefile.in  autogen.sh  configure  configure.ac
src/: Makefile.am  Makefile.in  decimal  declimits
